<resources>
    <string name="mapbox_access_token">pk.eyJ1IjoibmF1ZmFsZmFqYXIiLCJhIjoiY2xkbGE3bnBtMGV0bzN3bGNrMTJnZXVmcCJ9.kVM8DtctlZ6yIaSJT4kVeQ</string>
    <string name="app_name">Go+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_by_its_campus">GO+ by ITS Campus</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="register">Register</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="btn_continue">Continue</string>
    <string name="first_screen_content">Go+ merupakan sebuah aplikasi penunjuk jalan yang membantu anda untuk sampai di lokasi tujuan dengan berbagai macam fitur unik yang ada di dalamnya.</string>
    <string name="second_screen_content">Go+ dapat memberikan referensi tempat yang dapat membantu anda untuk lebih mengenal tempat tempat yang ada di dalam ITS.</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="web_client_id">420177308914-m4qvqdibcen24b80hc883vamg84ucl5f.apps.googleusercontent.com</string>
    <string name="or">Or</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="nama_user">Nama User</string>
    <string name="departemen_teknik_informatika">Departemen Teknik Informatika</string>
    <string name="kemana_anda_ingin_pergi">Kemana anda ingin pergi?</string>
    <string name="jadwal">Jadwal</string>
    <string name="riwayat">Riwayat</string>
    <string name="tempat_terdekat">Tempat Terdekat</string>
    <string name="dimanakah_anda">Dimanakah anda?</string>
    <string name="kemanakah_anda_ingin_pergi">Kemanakah anda ingin pergi?</string>
    <string name="go">Go</string>
    <string name="tambah_jadwal">Tambah Jadwal</string>
    <string name="add">Add</string>
    <string name="saatnya_merencanakan_perjalanan_sempurna_anda_ayo_jadwalkan_rencana_perjalanan_anda_dan_pastikan_setiap_momen_berharga">Saatnya merencanakan perjalanan sempurna Anda! Ayo jadwalkan rencana perjalanan Anda dan pastikan setiap momen berharga.</string>
    <string name="sayang_sekali_terlihat_masih_kosong">Sayang sekali, terlihat masih kosong</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="gagal_lokasi_saat_ini">Gagal mendapatkan lokasi saat ini</string>
    <string name="home_greetings">Halo %1$s. Siap untuk pergi?</string>

    //tflite
    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="label_interence_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>
    <string name="_0ms">0ms</string>
    <string name="_0_50">0.50</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="instruksi">Instruksi</string>
    <string name="name">name</string>
    <string name="eksplor">Eksplor</string>
    <string name="semoga_anda_dapat_membantu_teman_teman_disabilitas_dengan_aplikasi_ini_cheers">Semoga, anda dapat membantu teman teman disabilitas dengan aplikasi ini. cheers 👋👋</string>
    <string name="dari_lokasi_anda_saat_ini">Dari Lokasi Anda saat ini</string>
    <string name="tombol_deteksi_objek">Tombol deteksi objek</string>
    <string name="tombol_tutup">Tombol tutup</string>
    <string name="tombol_suara">Tombol Suara</string>
    <string name="gambar_terima_kasih">Gambar Terima Kasih</string>
    <string name="gambar_eksplor">Gambar Eksplor</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="kembali_navigasi">Kembali Navigasi</string>
    <string name="pengguna">Pengguna</string>
    <string name="informasi_personal">Informasi Personal</string>
    <string name="pada_laman_ini_anda_dapat_menyunting_informasi_umum_personal_berupa_nama_dan_email">Pada laman ini, anda dapat menyunting informasi umum personal berupa nama dan email.</string>
    <string name="nama">Nama</string>
    <string name="password_lama">Password Lama</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="password_baru">Password Baru</string>
    <string name="ubah_data_personal">Ubah Data Personal</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="informasi_pribadi">Informasi Pribadi</string>
    <string name="pada_laman_ini_anda_dapat_menyunting_password_yang_anda_gunakan_masuk_ke_aplikasi_ini">Pada laman ini, anda dapat menyunting password yang anda gunakan masuk ke aplikasi ini</string>
    <string name="data_personal_telah_diubah">Data personal telah diubah</string>
    <string name="apakah_anda_yakin_untuk_merubah_data_personal_anda">Apakah anda yakin untuk merubah data personal anda?</string>
    <string name="password_telah_diubah">Password telah diubah</string>
    <string name="apakah_anda_yakin_untuk_mengubah_password_anda">Apakah anda yakin untuk mengubah password anda?</string>
    <string name="gambar_map">Gambar Map</string>
    <string name="daftar_instruksi_arah">Daftar Instruksi Arah</string>
    <string name="tombol_gambaran">Tombol Gambaran</string>
    <string name="tombol_memusatkan">Tombol Memusatkan</string>
    <string name="menu_pengaturam">Menu Pengaturan</string>
    <string name="gambar_lokasi">Gambar Lokasi</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <item>EfficientDet Lite0</item>
        <item>EfficientDet Lite1</item>
        <item>EfficientDet Lite2</item>
    </string-array>
</resources>