<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/its_blue"
    tools:context=".view.onboarding.screen.SecondScreen">

    <ImageView
        android:id="@+id/go_plus_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:src="@drawable/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/go_by_its_campus" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:text="@string/second_screen_content"
        android:textColor="@color/its_go_text"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_plus_logo"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="37dp"
        android:backgroundTint="@color/its_yellow"
        app:cornerRadius="10dp"
        android:text="@string/btn_register"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/its_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="37dp"
        android:backgroundTint="@color/its_yellow"
        app:cornerRadius="10dp"
        android:text="@string/btn_login"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/its_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>