<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/its_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/its_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
            app:navigationContentDescription="Kembali"
            app:navigationIconTint="@color/its_blue"
            app:titleTextColor="@color/its_blue"
            app:title="Pengaturan"
            app:titleCentered="true"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="22dp"
            android:paddingEnd="22dp"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profil_image"
                android:layout_width="127dp"
                android:layout_height="127dp"
                app:cardCornerRadius="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <ImageView
                    android:id="@+id/iv_pengguna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/baseline_account_circle_24"
                    android:contentDescription="@string/pengguna" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_info_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/informasi_personal"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_profil_image"/>

            <TextView
                android:id="@+id/tv_info_personal_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pada_laman_ini_anda_dapat_menyunting_informasi_umum_personal_berupa_nama_dan_email"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_personal"/>

            <EditText
                android:id="@+id/et_nama"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:inputType="text"
                android:background="@drawable/et_border"
                android:backgroundTint="@color/its_grey"
                android:hint="@string/nama"
                android:textColorHint="@color/its_blue"
                android:textColor="@color/its_blue"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_personal_desc"
                tools:ignore="RtlSymmetry"
                android:autofillHints="Budi" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/et_border"
                android:backgroundTint="@color/its_grey"
                android:hint="@string/email"
                android:textColorHint="@color/its_blue"
                android:textColor="@color/its_blue"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_nama"
                tools:ignore="RtlSymmetry"
                android:autofillHints="youremail@gmail.com" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbtn_change_profile"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/its_yellow"
                android:text="@string/ubah_data_personal"
                android:textAllCaps="false"
                android:textColor="@color/its_blue"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <TextView
                android:id="@+id/tv_info_pribadi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/informasi_pribadi"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mbtn_change_profile"/>

            <TextView
                android:id="@+id/tv_info_pribadi_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pada_laman_ini_anda_dapat_menyunting_password_yang_anda_gunakan_masuk_ke_aplikasi_ini"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_pribadi"/>

            <EditText
                android:id="@+id/et_password_lama"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:inputType="textPassword"
                android:background="@drawable/et_border"
                android:backgroundTint="@color/its_grey"
                android:hint="@string/password_lama"
                android:textColorHint="@color/its_blue"
                android:textColor="@color/its_blue"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_pribadi_desc"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/et_password_baru"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:inputType="textPassword"
                android:background="@drawable/et_border"
                android:backgroundTint="@color/its_grey"
                android:hint="@string/password_baru"
                android:textColorHint="@color/its_blue"
                android:textColor="@color/its_blue"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password_lama"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/et_password_confirmation"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:inputType="textPassword"
                android:background="@drawable/et_border"
                android:backgroundTint="@color/its_grey"
                android:hint="@string/konfirmasi_password_baru"
                android:textColorHint="@color/its_blue"
                android:textColor="@color/its_blue"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password_baru"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbtn_change_password"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/its_yellow"
                android:text="@string/ubah_password"
                android:textAllCaps="false"
                android:textColor="@color/its_blue"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password_confirmation" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>