<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/its_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LoginFragment">

    <!--go+logo-->
    <ImageView
        android:id="@+id/go_plus_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/go_by_its_campus" />
    <!--email-->
    <EditText
        android:id="@+id/et_email"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/email_vec"
        android:drawablePadding="15dp"
        android:paddingStart="20dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_border"
        android:backgroundTint="@color/its_grey"
        android:hint= "@string/email"
        android:textColorHint="@color/its_blue"
        android:textColor="@color/its_blue"
        android:autofillHints="Email"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:gravity="bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_plus_logo"
        tools:ignore="RtlSymmetry" />
    <!--password-->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints="Email"
        android:background="@drawable/et_border"
        android:backgroundTint="@color/its_grey"
        android:drawableStart="@drawable/pass_vec"
        android:drawablePadding="15dp"
        android:fontFamily="@font/poppins"
        android:gravity="bottom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/its_blue"
        android:textColorHint="@color/its_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        tools:ignore="RtlSymmetry" />
    <!--tv_forgot-->
    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_password"/>
    <!--btn_login-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_login"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/its_yellow"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/its_blue"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />
    <!--or-->
    <LinearLayout
        android:id="@+id/ll_or_option"
        android:layout_width="310dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mbtn_login">
        <View
            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_weight="1.4"
            android:layout_gravity="center"
            android:background="@color/its_grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/its_grey"
            android:text="@string/or"/>

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_weight="1.4"
            android:layout_gravity="center"
            android:background="@color/its_grey"/>
    </LinearLayout>

    <!--ll_dont_have_acc-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google_sign_in"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/its_white"
        android:fontFamily="@font/poppins_semibold"
        android:text="Sign In with Google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:icon="@drawable/googleg_standard_color_18"
        app:iconTint="#00FFFFFF"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_or_option" />

    <LinearLayout
        android:id="@+id/ll_dont_have_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_google_sign_in">

        <TextView
            android:id="@+id/tv_dont_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/tv_grey"
            android:textSize="11sp"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="11sp" />
    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>